crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::missing_returns::test_missing_return_with_if.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::missing_returns::test_missing_return_with_if"
---
Fixture: semantic_tests::control_flow::missing_returns::test_missing_return_with_if
============================================================
Source code:

        func test(x: felt) -> felt {
            if (x == 0) {
                return 1;
            }
            // Missing return for else case
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::control_flow::missing_returns::test_missing_return_with_if:2:14 ]
   │
 2 │         func test(x: felt) -> felt {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
