crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::missing_returns::test_nested_missing_return.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::missing_returns::test_nested_missing_return"
---
Fixture: semantic_tests::control_flow::missing_returns::test_nested_missing_return
============================================================
Source code:

        fn test(x: felt) -> felt {
            if (x == 0) {
                if (x == 10) {
                    return 1;
                } else {
                    // Missing return in nested else
                }
            } else {
                return 2;
            }
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::control_flow::missing_returns::test_nested_missing_return:2:12 ]
   │
 2 │         fn test(x: felt) -> felt {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
