crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::missing_returns::test_unit_return_type_implicit.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::missing_returns::test_unit_return_type_implicit"
---
Fixture: semantic_tests::control_flow::missing_returns::test_unit_return_type_implicit
============================================================
Source code:

        func test() {
            let x = 42;
            // Missing return () for unit functions
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::control_flow::missing_returns::test_unit_return_type_implicit:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
