crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::unreachable_code::test_multiple_returns_in_sequence.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::unreachable_code::test_multiple_returns_in_sequence"
---
Fixture: semantic_tests::control_flow::unreachable_code::test_multiple_returns_in_sequence
============================================================
Source code:

        func test() -> felt {
            return 1;
            return 2; // Error: unreachable code
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3001] Warning: Unreachable return statement
   ╭─[ semantic_tests::control_flow::unreachable_code::test_multiple_returns_in_sequence:4:13 ]
   │
 4 │             return 2; // Error: unreachable code
   │             ────┬────  
   │                 ╰────── Unreachable return statement
───╯
