crates/compiler/semantic/tests/snapshots/diagnostics__expressions::type_errors::test_function_not_called_error.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: expressions::type_errors::test_function_not_called_error"
---
Fixture: semantic_tests::expressions::type_errors::test_function_not_called_error
============================================================
Source code:

        fn get_value() -> felt {
            return 42;
        }

        fn test() {
            let x = get_value + 5;  // Should suggest adding parentheses
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Invalid left operand for arithmetic operator 'Add'. Expected 'felt', found 'function'
   ╭─[ semantic_tests::expressions::type_errors::test_function_not_called_error:7:21 ]
   │
 7 │             let x = get_value + 5;  // Should suggest adding parentheses
   │                     ────┬────  
   │                         ╰────── Invalid left operand for arithmetic operator 'Add'. Expected 'felt', found 'function'
   │                         │      
   │                         ╰────── Did you forget to call the function with parentheses?
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::expressions::type_errors::test_function_not_called_error:6:12 ]
   │
 6 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
